2006-07-17 Enrico Sersale <enrico@fibernet.ro>
	
  * Headers/AppKit/NSHelpManager.h: 
  * Source/NSHelpManager.m:
  added -setContextHelp:forObject: as specified in Apple docs;
  -setContextHelp:withObject: deprecated. 

2006-07-16 Enrico Sersale <enrico@fibernet.ro>
	
  * Headers/Additions/GNUstepGUI/GSHelpManagerPanel.h: added -buttonAction: 
  method.
  * Source/GSHelpManagerPanel.m: implemented -buttonAction:.
  added a button to close the panel and changed the style mask of the window 
  to NSTitledWindowMask | NSResizableWindowMask.

2006-07-15 Enrico Sersale <enrico@fibernet.ro>
	
  * Headers/AppKit/AppKit.h: added NSHelpManager.h.
  * Headers/AppKit/NSHelpManager.h: declaration for new method -pathForHelpResource:
  * Source/NSHelpManager.m: implemented -pathForHelpResource: in the NSBundle 
  category. -pathForHelpResource: looks for help files giving the priority
  to localized resources. 
  -showHelp: looks for rtfd files too.
  * Source/GSHelpManagerPanel.m: various fixes to avoid a crash when quitting
  and to resize correctly the NSTextView.

2006-07-14 01:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h:
	* Source/GSNibCompatibility.m: Added method initWithWindow:.. to 
	initialize the template from an actual window instance.

2006-07-10 00:12 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSSplitView.m: Keyed encoding changes in initWithCoder:

2006-07-09 10:50 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibTemplates.h: Declaration for 
	new methods: visibleWindows, deferredWindows, & customClasses. 
	* Source/GSNibTemplates.m: Simplification of awakeFromContext: code
	due to new gorm format changes.   Also, changes to init to initialize
	the new ivars, dealloc to release them and modifications to
	initWithCoder: and encodeWithCoder: to decode and encode the new 
	data.  Added new methods: visibleWindows, deferredWindows, & 